--- a/d8/d8.md
+++ b/d8/d8.md
@@ -2,6 +2,23 @@
 
 ## 🔗 [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/description/)
 
+## Intuition :
+
+- Brute Force :
+  Calculate each substring, chech Palindromic or not , if it is then compare with existing ans and update.
+
+- Optimum Solution :
+  I can have two Palindromic Strings
+
+  - Even : abba
+  - Odd : aba
+
+  e.g. babad
+
+       Lets say i=1 , i will check odd string("a") and even string("ab").
+
+       I will expand both string until character at i and j are equal and store maximum result.
+
 ## Code
 
 ```java
