--- a/d10/d10.md
+++ b/d10/d10.md
@@ -30,7 +30,7 @@ class Solution {
 
 # Similar Questions
 
-## 🔗 [1221. Split a String in Balanced Strings](https://leetcode.com/problems/split-a-string-in-balanced-strings/description/)
+## 🔗 [2273. Find Resultant Array After Removing Anagrams](https://leetcode.com/problems/find-resultant-array-after-removing-anagrams/)
 
 ```java
 class Solution {
@@ -71,8 +71,11 @@ class Solution {
     }
 }
 ```
-
 ## 🔗 [438. Find All Anagrams in a String](https://leetcode.com/problems/find-all-anagrams-in-a-string/description/)
+
+### Intuition : 
+- Put all char of p in set
+- Using two pointer approach check s char in set and expand substring upto length of p and check for anagram with s.
 
 ```java
   class Solution {
