--- a/d19/d19.md
+++ b/d19/d19.md
@@ -2,6 +2,12 @@
 
 ## 🔗 [206. Reverse Linked List](https://leetcode.com/problems/reverse-linked-list/)
 
+## Traverse LL From Right to Left :
+ - Stack
+ - Recursion
+ - Reverse LL
+
+
 ## (Iterative Approach) Code
 
 
