--- a/d15/d15.md
+++ b/d15/d15.md
@@ -33,7 +33,7 @@ class Solution {
         return ans;
     }
 }
-// TTime complexity: O(2^k * n) where k is the target, n is the average length
+// Time complexity: O(2^k * n) where k is the target, n is the average length
 // Space complexity: O(n*c), n is the average length and c is the no. of combinations
 
 ```
