--- a/d44/d44.md
+++ b/d44/d44.md
@@ -1,6 +1,6 @@
 # Day 44
 
-## 🔗 [104. Maximum Depth of Binary Tree](hhttps://leetcode.com/problems/maximum-depth-of-binary-tree/description/)
+## 🔗 [104. Maximum Depth of Binary Tree](https://leetcode.com/problems/maximum-depth-of-binary-tree/description/)
 
 ## Code
 
