--- a/d47/d47.md
+++ b/d47/d47.md
@@ -53,20 +53,20 @@ Space Complexity: O(1)
 
 ```java
 class Solution {
-    private boolean isSameTree(TreeNode p , TreeNode q){
-         if(p==null && q==null){
-         return true ;
+    private boolean solve(TreeNode leftNode, TreeNode rightNode) {
+        if (leftNode == null && rightNode == null) {
+            return true;
         }
-        else if(p==null || q==null || p.val!=q.val){
-            return false ;
-        }else{
-           boolean left = isSameTree(p.left,q.right);
-           boolean right = isSameTree(p.right,q.left);
-           return left && right ;
+        if (leftNode != null && rightNode == null || leftNode == null && rightNode != null) {
+            return false;
         }
+        boolean checkCondition = leftNode.val == rightNode.val;
+        boolean leftResult = solve(leftNode.left, rightNode.right);
+        boolean rightResult = solve(leftNode.right, rightNode.left);
+        return checkCondition && leftResult && rightResult;
     }
     public boolean isSymmetric(TreeNode root) {
-        return isSameTree(root.left , root.right);
+        return solve(root.left,root.right);
     }
 }
 /*
