--- a/d51/d51.md
+++ b/d51/d51.md
@@ -5,73 +5,63 @@
 ## Code
 
 ```java
-/**
- * Definition for a binary tree node.
- * public class TreeNode {
- * int val;
- * TreeNode left;
- * TreeNode right;
- * TreeNode(int x) { val = x; }
- * }
- */
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        // base case
-        if (root == null || root == p || root == q) {
+
+        if (root == null) {
+            return null;
+        }
+
+        if (root == p || root == q) {
             return root;
         }
 
         TreeNode left = lowestCommonAncestor(root.left, p, q);
         TreeNode right = lowestCommonAncestor(root.right, p, q);
 
-        // result
-        if (left == null) {
+        if (left == null && right != null) {
             return right;
-        } else if (right == null) {
+        } else if (left != null && right == null) {
             return left;
+        } else if (left == null && right == null) {
+            return null;
+        } else {
+            return root; // left!=null && right!=null
         }
-
-        else {
-            return root;
-        }
-
     }
 }
 /*
  * Time Complexity: O(n)
- * Space Complexity: O(n)
+ * Space Complexity: O(1)
  */
 ```
 
 ## Solved Similar Problems :
 
-## 🔗 [530. Minimum Absolute Difference in BST](https://leetcode.com/problems/minimum-absolute-difference-in-bst/description/)
+## 🔗 [235. Lowest Common Ancestor of a Binary Search Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/)
 
 ```java
 class Solution {
-    List<Integer> list = new ArrayList<>();
-    private void solve(TreeNode root){
-    if(root==null){
-        return ;
-    }
-    solve(root.left);
-    list.add(root.val);
-    solve(root.right);
-   }
-    public int getMinimumDifference(TreeNode root) {
-        solve(root);
-        int min=Integer.MAX_VALUE ;
-        for(int i=0;i<list.size()-1;i++){
-            min =Math.min(min,list.get(i+1)-list.get(i));
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+         if (root == null) {
+            return null;
+         }
+
+        if(root.val>p.val && root.val>q.val){
+             return lowestCommonAncestor(root.left, p, q);
+        }else if(root.val<p.val && root.val<q.val){
+             return lowestCommonAncestor(root.right, p, q);
+        }else{
+            return root ;  // we cant go either left or right side which means p or q equal to root.val or root is ancestor of p and q
         }
-        return min ;
     }
 }
 /*
-Inorder treversal gives sorted numbers
+236. Lowest Common Ancestor of a Binary Tree : Question Solution works over here
+Optimal solution : Use property of binary tree
 */
 /*
 Time Complexity: O(n)
-Space Complexity: O(n)
+Space Complexity: O(1)
 */
 ```
