--- a/d60/d60.md
+++ b/d60/d60.md
@@ -1,5 +1,40 @@
 # Day 60
 
+
+## Prerequisite Problem :
+
+## 🔗 [53. Maximum Subarray](https://leetcode.com/problems/maximum-subarray/)
+
+### Approach : 
+ Can negative numbers sum be maximum ? -->NO.
+
+ Only Single negative number can be maximum.
+
+### Kadane's algorithm Steps :
+
+ Calculate Prefix Sum ----> Compare with ans ----> if Prefix Sum less than 0 update with 0
+
+## Code
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int maxSum = Integer.MIN_VALUE;
+        int prefixSum = 0;
+        for (int num : nums) {
+            prefixSum += num;
+            maxSum = Math.max(maxSum, prefixSum);
+            prefixSum = prefixSum < 0 ? 0 : prefixSum;
+        }
+
+        return maxSum;
+    }
+}
+// Time complexity: O(n)
+// Space complexity: O(1)
+
+```
+
 ## 🔗 [152. Maximum Product Subarray](https://leetcode.com/problems/maximum-product-subarray/description/)
 
 ## Code
@@ -8,23 +43,21 @@
 class Solution {
     public int maxProduct(int[] nums) {
         int n = nums.length;
-        int l = 1;
-        int r = 1;
-        int ans = nums[0];
+        double prefix = 1; // left product
+        double suffix = 1; // right product
+        double ans = Integer.MIN_VALUE;
 
         for (int i = 0; i < n; i++) {
-            // if any of l or r become 0 then update it to 1
-            l = l == 0 ? 1 : l;
-            r = r == 0 ? 1 : r;
+            prefix *= (double) nums[i];
+            suffix *= (double) nums[n - 1 - i];
 
-            l *= nums[i];          // prefix product
-            r *= nums[n - 1 - i]; // suffix product
+            ans = Math.max(ans, Math.max(prefix, suffix));
 
-            ans = Math.max(ans, Math.max(l, r));
-
+            // if any of prefix or suffix become 0 then update it to 1
+            prefix = prefix == 0 ? 1 : prefix;
+            suffix = suffix == 0 ? 1 : suffix;
         }
-        return ans;
-
+        return (int) ans;
     }
 }
 /*
@@ -32,6 +65,60 @@ Time Complexity: O(n)
 Space Complexity: O(1)
 */
 ```
+
+## But How Does this working and why suffix Sum here :
+
+
+### Maximum Sum Subarray
+
+In the maximum sum subarray problem, using only the prefix sum (Kadane's algorithm) works because:
+
+1. **Addition**: Addition of numbers is associative and commutative, and there is no risk of flipping the sign of the sum when adding a negative number.
+2. **Reset on Negative**: When the sum becomes negative, it can be reset to zero to start fresh from the next element, which makes it straightforward to only consider the prefix sum.
+
+### Maximum Product Subarray
+
+For the maximum product subarray problem, the situation is more complex due to the following reasons:
+
+1. **Negative Numbers**: Multiplying two negative numbers results in a positive number. Thus, a subarray with an even number of negative numbers might have a larger product than subarrays with all positive numbers.
+2. **Zeros**: Zeros reset the product to zero, which can interrupt the subarray, necessitating a restart of the product calculation from the next element.
+3. **Sign Flipping**: The product can flip signs, changing a large negative product to a positive one when multiplied by another negative number. This makes tracking only the prefix product insufficient.
+
+### Prefix and Suffix Products
+
+To handle these complications, both prefix and suffix products are considered:
+
+1. **Prefix Product**: This is the product of elements from the start of the array to the current element. It helps in capturing the maximum product subarray that starts from the beginning and ends at the current element.
+2. **Suffix Product**: This is the product of elements from the end of the array to the current element. It helps in capturing the maximum product subarray that starts from the end and ends at the current element.
+
+### Example to Illustrate
+
+Consider the array: `nums = [2, 3, -2, -4]`.
+
+If you use only prefix products:
+- `2` -> `2`
+- `2 * 3 = 6` -> `6`
+- `6 * -2 = -12` -> `-12`
+- `-12 * 4 = -48` -> `-48`
+
+This misses the subarray `[2, 3, -2, -4]` which has the maximum product of `8`.
+
+
+Now if you use  suffix products:
+- `-4` -> `-4`
+- `-4 * -2 = 8` -> `8`
+- `8 * 3 = 24` -> `24`
+- `24 * 2 = 48` -> `48`
+
+Here you got correct answer which is 48
+
+### Conclusion
+
+In summary, the need to use both prefix and suffix products in the maximum product subarray problem arises because:
+- The product of negative numbers can turn a large negative product into a positive product.
+- Zeros interrupt the product calculation.
+- The sign of the product can flip, making tracking only the prefix product insufficient.
+
 
 ## Solved Similar Problem :
 ## 🔗 [628. Maximum Product of Three Numbers](https://leetcode.com/problems/maximum-product-of-three-numbers/description/)
