--- a/d63/d63.md
+++ b/d63/d63.md
@@ -36,8 +36,8 @@ class Solution {
     }
 }
 /*
-Time Complexity: O(3^n)
-Space Complexity: O(n)    // recursive stack
+Time Complexity: O(3^(m + n))
+Space Complexity: O(m+n)    // recursive stack
 */
 ```
 
@@ -85,35 +85,43 @@ class Solution {
     }
 }
 /*
-Time Complexity: O(2^n)
-Space Complexity: O(n) // recursive stack
+Time Complexity: O(m*n)
+Space Complexity: O(m*n) // recursive stack
 */
 ```
 
 ## Using (Tabulation) Bottom-Up Approach :
 
 ```java
-    public static int knapsackTab(int val[], int wt[], int w) {
-        int n = val.length + 1;
-        int m = w + 1;
-        int dp[][] = new int[n][m];
-        for (int i = 1; i < n; i++) {
-            for (int j = 1; j < m; j++) {
-                int V = val[i - 1]; // particular element
-                int W = wt[i - 1]; // particular element weight
-                if (W <= j) {
-                    int includeProfit = V + dp[i - 1][j - W];
-                    int excludeProfit = dp[i - 1][W];
-                    dp[i][j] = Math.max(includeProfit, excludeProfit);
+    public int minDistance(String word1, String word2) {
+        int m = word1.length();
+        int n = word2.length();
+        int[][] dp = new int[m + 1][n + 1];
+
+        //Fill base values
+        for (int j = n; j >= 0; j--) {
+            dp[m][j] = n - j;
+        }
+        for (int i = m; i >= 0; i--) {
+            dp[i][n] = m - i;
+        }
+
+        for (int i = m - 1; i >= 0; i--) {
+            for (int j = n - 1; j >= 0; j--) {
+                if (word1.charAt(i) == word2.charAt(j)) {
+                    dp[i][j] = dp[i + 1][j + 1];
                 } else {
-                    int excludeProfit = dp[i - 1][W];
-                    dp[i][j] = excludeProfit;
+                    int insert = 1 + dp[i][j + 1];
+                    int remove = 1 + dp[i + 1][j];
+                    int replace = 1 + dp[i + 1][j + 1];
+                    dp[i][j] = Math.min(insert, Math.min(remove, replace));
                 }
+
             }
         }
-        //printArray(dp);
-        return dp[n - 1][m - 1];
-    }
+        return dp[0][0];
+
+}
 /*
 Time Complexity: O(n*m)
 Space Complexity: O(n*m)
