--- a/d65/d65.md
+++ b/d65/d65.md
@@ -7,44 +7,24 @@
 ## Using Recursion :
 
 ```java
-        static int[][] memo = new int[100][100];
-
-        public static int matrixChainMemoised(int[] p, int i, int j) {
-            if (i == j) {
-                return 0;
-            }
-            if (memo[i][j] != -1) {
-                return memo[i][j];
-            }
-            memo[i][j] = Integer.MAX_VALUE;
-            for (int k = i; k < j; k++) {
-                int temp1 = matrixChainMemoised(p, i, k);
-                int temp2 = matrixChainMemoised(p, k + 1, j);
-                int mul = p[i - 1] * p[k] * p[j];
-                memo[i][j] = Math.min(memo[i][j], temp1 + temp2 + mul);
-            }
-            return memo[i][j];
+    private int recursion(int[][] grid, int i, int j) {
+        int n = grid.length;
+        int m = grid[0].length;
+        if (i == n - 1 && j == m - 1) {
+            return grid[i][j];
         }
-
-        static int MatrixChainOrder(int[] p, int n) {
-            int i = 1, j = n - 1;
-            return matrixChainMemoised(p, i, j);
-        }
-
-    
-        public static void main(String[] args) {
-
-            int arr[] = {1, 2, 3, 4};
-            int n = arr.length;
-
-            for (int[] row : memo) {
-                Arrays.fill(row, -1);
+        int minAns = Integer.MAX_VALUE;
+        for (int dir[] : direction) {
+            int i_ = i + dir[0];
+            int j_ = j + dir[1];
+            if (i_ >= 0 && i_ < n && j_ >= 0 && j_ < m) {
+                minAns = Math.min(minAns, grid[i][j] + recursion(grid, i_, j_));
             }
-
-            System.out.println("Minimum number of multiplications is " + MatrixChainOrder(arr, n));
         }
+        return minAns;
+    }
 /*
-Time Complexity: O(3^n)
+Time Complexity: O(2^n)
 Space Complexity: O(n)    // recursive stack
 */
 ```
@@ -52,79 +32,63 @@ Space Complexity: O(n)    // recursive stack
 ## Using (Memoization) Top Down Approach :
 
 ```java
-class Solution {
-    private int solve(String s1, String s2, int i, int j, int memo[][]) {
-        int m = s1.length();
-        int n = s2.length();
-
-        // add extra s2 word part
-        if (i == m) {
-            return n - j;
+    private int memo(int[][] grid, int[][] memo, int i, int j) {
+        int n = grid.length;
+        int m = grid[0].length;
+        if (i == n - 1 && j == m - 1) {
+            return grid[i][j];
         }
-        // remove extra s1 word part
-        if (j == n) {
-            return m - i;
-        }
-
         if (memo[i][j] != -1) {
             return memo[i][j];
         }
-        // If character are same
-        if (s1.charAt(i) == s2.charAt(j)) {
-            return solve(s1, s2, i + 1, j + 1, memo);
+        int minAns = Integer.MAX_VALUE;
+        for (int dir[] : direction) {
+            int i_ = i + dir[0];
+            int j_ = j + dir[1];
+            if (i >= 0 && i_ < n && j_ >= 0 && j_ < m) {
+                minAns = Math.min(minAns, grid[i][j] + memo(grid, memo, i_, j_));
+            }
         }
-        // If character are not same
-
-        int insert = 1 + solve(s1, s2, i, j + 1, memo);
-        int remove = 1 + solve(s1, s2, i + 1, j, memo);
-        int replace = 1 + solve(s1, s2, i + 1, j + 1, memo);
-        memo[i][j] = Math.min(insert, Math.min(remove, replace));
+        memo[i][j] = minAns;
         return memo[i][j];
     }
-
-    public int minDistance(String word1, String word2) {
-        int m = word1.length();
-        int n = word2.length();
-        int[][] memo = new int[m + 1][n + 1];
-        for (int[] row : memo) {
-            Arrays.fill(row, -1);
-        }
-        return solve(word1, word2, 0, 0, memo);
-    }
-}
 /*
-Time Complexity: O(2^n)
-Space Complexity: O(n) // recursive stack
+Time Complexity: O(m*n)
+Space Complexity: O(m*n)
 */
 ```
 
 ## Using (Tabulation) Bottom-Up Approach :
 
 ```java
-class Solution {
-    public int minPathSum(int[][] cost) {
-        int m = cost.length;
-        int n = cost[0].length;
-        int[][] dp = new int[m][n];
-        dp[0][0] = cost[0][0];
-        for (int i = 1; i < m; i++) {
-            dp[i][0] = dp[i - 1][0] + cost[i][0];
+        private int tabulation(int[][] grid) {
+        int n = grid.length;
+        int m = grid[0].length;
+        int[][] dp = new int[n][m];
+
+        //For n-1 i can move right only and for m-1 i can move bottom only
+        //For n-1 row(right to left) and m-1(bottom to up)
+        int sum = 0;
+        for (int j = m - 1; j >= 0; j--) {
+            sum += grid[n - 1][j];
+            dp[n - 1][j] = sum;
         }
-        for (int i = 1; i < n; i++) {
-            dp[0][i] = dp[0][i - 1] + cost[0][i];
+        sum = 0;
+        for (int i = n - 1; i >= 0; i--) {
+            sum += grid[i][m - 1];
+            dp[i][m - 1] = sum;
         }
 
-        for (int i = 1; i < m; i++) {
-            for (int j = 1; j < n; j++) {
-                dp[i][j] = cost[i][j] + Math.min(dp[i - 1][j], dp[i][j - 1]);
+        for (int i = n - 2; i >= 0; i--) {
+            for (int j = m - 2; j >= 0; j--) {
+                dp[i][j] = grid[i][j] + Math.min(dp[i][j + 1], dp[i + 1][j]);
             }
         }
-        return dp[m - 1][n - 1];
+        //printArray(dp);
+        return dp[0][0];
     }
-
-}
 /*
-Time Complexity: O(n*m)
-Space Complexity: O(n*m)
+Time Complexity: O(m*n)
+Space Complexity: O(m*n)
 */
 ```
