--- a/d68/d68..md
+++ b/d68/d68..md
@@ -86,13 +86,7 @@ class Solution {
             Arrays.fill(row, -1);
         }
 
-        int dp[][] = new int[temp.length + 1][temp.length + 1];
-
-        for (int a[] : dp) {
-            Arrays.fill(a, -1);
-        }
-
-        return memo(1, cuts.length, temp, dp);
+        return memo(1, cuts.length, temp, memo);
     }
 
 }
