--- a/d70/d70.md
+++ b/d70/d70.md
@@ -4,7 +4,7 @@
 
 ## Note :
 
-In recursion , branches nothing but for loop
+In recursion , branches nothing but for loop.
 
 ## Code
 
@@ -80,9 +80,26 @@ Space Complexity: O(n)
 ## Using (Tabulation) Bottom-Up Approach :
 
 ```java
+    private boolean tabulation(String s ,Set<String> set){
+        int n = s.length();
+        Boolean [] tab = new Boolean[n+1];
+        tab[n]=true ;
 
+        for(int idx=n-1 ;idx>=0 ;idx--){
+            tab[idx]=false;
+            for(int i = idx ;i<n ;i++){
+                String subString = s.substring(idx,i+1);
+                if(set.contains(subString)&& tab[i+1]){
+                     tab[idx] =true ;
+                     break ;
+                }
+            }
+        }
+        //System.out.println(Arrays.toString(tab));
+        return tab[0] ;
+    }
 /*
-Time Complexity: O(n*amount)
+Time Complexity: O(n*n)
 Space Complexity: O(n)
 */
 ```
