--- a/d71/d71.md
+++ b/d71/d71.md
@@ -11,25 +11,37 @@ In recursion , branches nothing but for loop.
 ## Using Recursion :
 
 ```java
-    private boolean recursion(String s ,Set<String> set, int idx){
-        int n = s.length();
-
-        if(idx==n){
-             return true ;
+    static boolean isPalindrome(String str, int i, int j)
+    {
+        while (i < j) {
+            if (str.charAt(i) != str.charAt(j))
+                return false;
+            i++;
+            j--;
         }
-
-        for(int i = idx ;i<n ;i++){
-            String subString = s.substring(idx,i+1);
-            if(set.contains(subString)&& recursion(s,set,i+1)){
-                 return true ;
-            }
-        }
-        return false ;
+        return true;
     }
 
-    public boolean wordBreak(String s, List<String> wordDict) {
-        Set<String> set = new HashSet<>(wordDict);
-        return recursion(s,set,0);
+    static int minPalPartition(String str, int i, int j)
+    {
+        if(isPalindrome(str, i, j)){
+            return 0 ;
+        }
+
+        if (i >= j){
+            return 0;
+        }
+
+
+        int minCuts = Integer.MAX_VALUE;
+
+        for (int k = i; k < j; k++) {
+            int left = minPalPartition(str, i, k) ;
+            int right = minPalPartition(str, k + 1, j) ;
+            int cuts =  left + right + 1 ;
+            minCuts = Math.min(minCuts, cuts);
+        }
+        return minCuts ;
     }
 /*
 Time Complexity: O(2^n)
