--- a/d52/d52.md
+++ b/d52/d52.md
@@ -67,3 +67,119 @@ class Solution {
  * Space Complexity: O(V+E)
  */
 ```
+
+## Solved Similar Problem :
+
+
+### Build Graph for directed and undirected graph : 
+ - Add vertex, edge
+ - Remove edge
+
+
+ ```java
+ public class Graph {
+    static class Edge {
+        int destination;
+        int weight;
+
+        public Edge(int destination, int weight) {
+            this.destination = destination;
+            this.weight = weight;
+        }
+
+        @Override
+        public String toString() {
+            return "{" + destination + ", weight=" + weight + "}";
+        }
+    }
+
+    private final Map<Integer, List<Edge>> adjacencyList;
+
+    final boolean isUnDirected;
+
+    public Graph(boolean isUnDirected) {
+        this.adjacencyList = new HashMap<>();
+        this.isUnDirected = isUnDirected;
+    }
+
+    /*
+     * Time Complexity: O(1)
+     * Space Complexity: O(1)
+     */
+    public void addVertex(int vertex) {
+        this.adjacencyList.putIfAbsent(vertex, new LinkedList<>());
+    }
+
+    /*
+     * Time Complexity: O(1)
+     * Space Complexity: O(1)
+     */
+    public void addEdge(int source, int destination, int weight) {
+        //For Directed Graph
+        this.adjacencyList.get(source).add(new Edge(destination, weight));
+
+        // For Undirected Graph
+        if (isUnDirected) {
+            this.adjacencyList.get(destination).add(new Edge(source, weight));
+        }
+    }
+
+    /*
+     * Time Complexity: O(V+E)
+     * Space Complexity: O(1)
+     */
+    public void deleteVertex(int vertex) {
+        this.adjacencyList.remove(vertex);
+
+        //key : vertex
+        //value : list of edges(LinkedList)
+        for (int key : this.adjacencyList.keySet()) {
+            List<Edge> value = this.adjacencyList.get(key);
+            Iterator<Edge> iterator = value.iterator();
+            while (iterator.hasNext()) {
+                Edge edge = iterator.next();
+                if (edge.destination == vertex) {
+                    iterator.remove();
+                    break;
+                }
+            }
+            //value.removeIf(edge -> edge.destination == vertex);
+        }
+    }
+
+    @Override
+    public String toString() {
+        return "Graph{" +
+                "adjacencyList=" + adjacencyList +
+                ", isUnDirected=" + isUnDirected +
+                '}';
+    }
+}
+
+
+public class BuildGraph {
+
+    public static void main(String[] args) {
+        Graph dG = new Graph(false);
+
+        dG.addVertex(1);
+        dG.addVertex(2);
+        dG.addVertex(3);
+        dG.addVertex(4);
+
+        dG.addEdge(1,2,1);
+        dG.addEdge(1,3,1);
+        dG.addEdge(1,4,3);
+
+        dG.addEdge(2,3,2);
+
+        dG.addEdge(3,4,2);
+
+        System.out.println(dG);
+
+        dG.deleteVertex(4);
+
+        System.out.println(dG);
+    }
+}
+ ```
