revised 28 day, same aug-12 problem

--- a/d28/d28.md
+++ b/d28/d28.md
@@ -17,8 +17,10 @@ class Solution {
         return minHeap.peek();
    }
 }
-//Time Complexity: O(logn)
+//Time Complexity: O(n×logk)
 //Space Complexity: O(n)
+// where 
+//  where n is the number of elements in the nums array and k is the kth largest element you are trying to find.
 ```
 
 ## 🔗 [621. Task Scheduler](https://leetcode.com/problems/task-scheduler/description/)
